# agroclimat2050

./: .gitignore  agro_app.prof  agro_decision_tree.py  agro_indicator_app.py  agro_indicator_app_hvplot.py  agro_indicator_app_improved.py  agro_indicator_app_old.py  agro_indicator_app_refactored.py  agro_indicator_app_v2.py  agro_kpi_simple_hvplot.py  agro_simple.py  main.py  program.prof  pyproject.toml  requirements.txt  thermal_stress_cache.parquet
src/: __init__.py
src/core/: __init__.py  data_access.py  indicators.py  models.py
src/ui/: __init__.py
src/ui/components/: __init__.py
