[project]
name = "agroclima2050"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.24.1",
    "geopandas>=1.1.1",
    "geoviews>=1.14.0",
    "holoviews>=1.21.0",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "panel>=1.7.2",
    "param>=2.2.1",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.7",
    "xarray>=2025.6.1",
]

[tool.uv.workspace]
members = [
    "batch8_mednum",
]

[dependency-groups]
dev = [
    "pyinstrument>=5.0.3",
    "snakeviz>=2.2.2",
]
